Jetpack Setup Wizard: Fix the configure button alignment (#15992)

--- a/_inc/client/setup-wizard/feature-toggle/style.scss
+++ b/_inc/client/setup-wizard/feature-toggle/style.scss
@@ -13,7 +13,7 @@
 		border-radius: 4px;
 
 		&.jp-setup-wizard-fixed-right-column {
-			grid-template-columns: 100px auto 220px;
+			grid-template-columns: 100px auto 240px;
 		}
 	}
 
@@ -114,7 +114,7 @@
 .jp-setup-wizard-feature-toggle-button-container {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: flex-end;
 	justify-content: center;
 
 	padding-right: 1rem;
